--- a/index.html
+++ b/index.html
@@ -36,34 +36,32 @@
     </section>
 
     <section class="calc__result">
-      <div class="result">
-        399,981
-      </div>
+      <div class="result">0</div>
     </section>
 
     <section class="calc__container">
       <div class="calc__buttons">
-        <button class="button">7</button>
-        <button class="button">8</button>
-        <button class="button">9</button>
+        <button class="button" value="7">7</button>
+        <button class="button" value="8">8</button>
+        <button class="button" value="9">9</button>
         <button class="button button__del">DEL</button>
-        <button class="button">4</button>
-        <button class="button">5</button>
-        <button class="button">6</button>
-        <button class="button">+</button>
-        <button class="button">1</button>
-        <button class="button">2</button>
-        <button class="button">3</button>
-        <button class="button">-</button>
-        <button class="button">.</button>
-        <button class="button">0</button>
-        <button class="button">/</button>
-        <button class="button">X</button>
+        <button class="button" value="4">4</button>
+        <button class="button" value="5">5</button>
+        <button class="button" value="6">6</button>
+        <button class="button operator" value="+">+</button>
+        <button class="button" value="1">1</button>
+        <button class="button" value="2">2</button>
+        <button class="button" value="3">3</button>
+        <button class="button operator" value="-">-</button>
+        <button class="button decimal" value=".">.</button>
+        <button class="button" value="0">0</button>
+        <button class="button operator" value="/">/</button>
+        <button class="button operator" value="X">X</button>
         <button class="button button__reset">RESET</button>
-        <button class="button button__equal">=</button>
+        <button class="button  operator button__equal">=</button>
       </div>
     </section>
   </section>
+  <script src="index.js"></script>
 </body>
-
 </html>
